--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
   /*Slider*/
   
   /*.slider {
-    background-image: url("4.jpg");
+    background-image: url("images/4.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
@@ -58,10 +58,10 @@ body {
   }
   
   @keyframes slide {
-    25% {background-image: url("1.jpg");}
-    50% {background-image: url("2.jpg");}
-    75% {background-image: url("3.jpg");}
-    100% {background-image: url("4.jpg");}
+    25% {background-image: url("images/1.jpg");}
+    50% {background-image: url("images/2.jpg");}
+    75% {background-image: url("images/3.jpg");}
+    100% {background-image: url("images/4.jpg");}
   }*/
   /*---------------------*/
   .container {
@@ -158,7 +158,7 @@ body {
   }
   /*Tercera parte del cuerpo*/
   #fondo{ /*imagen de fondo verde*/
-    background-image: url(fondo_verde.png);
+    background-image: url(images/fondo_verde.png);
     background-size: cover; /*Para que la imagen cubra el tamaño de la pagina*/
     background-position: center center;
     background-repeat: no-repeat;
