--- a/styles.css
+++ b/styles.css
@@ -195,17 +195,18 @@ height: 500px;/* Alto de la imagen */
 }
 .fondo_blanco{
   background-color: white;
-  height: 900px;
+  height: 1000px;
   text-align: center;
 }
 /*Tercera parte del cuerpo*/
 #fondo{ /*imagen de fondo verde*/
-  background-image: url(fondo_verde2.png);
+  background-image: url(images/fondo_verde.png);
   background-size: cover; /*Para que la imagen cubra el tamaño de la pagina*/
   background-position: center center;
   background-repeat: no-repeat;
   height: 1200px; /*Se le coloca esta altura para que entre todo el texto requerido dentro del fondo*/
   width: 100%;
+  /*estas 2 lineas de código son para el titulo de la tercera seccion*/
   color:white;
   text-align: center;
 }
@@ -219,7 +220,7 @@ height: 500px;/* Alto de la imagen */
   text-align: center;
   margin-left: 50px; 
 }
-.parrafos_alineados1 { /*para que los dos primeros parrafos de la tercera seccion esten a la misma altura*/
+.parrafos_alineados1 { /*para que los parrafos de la derecha e izquierda de la tercera seccion esten a la misma altura*/
   display: flex;
   margin-left: 50px;
 }
@@ -240,7 +241,7 @@ height: 500px;/* Alto de la imagen */
   color:white;
 }
 #derecha1{
-  text-align: right; /*parrafo este alineado a la derecha*/
+  text-align: right; /*parrafo inferior este alineado a la derecha*/
 }
 .parrafo4{
   color:white;
