--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #E7EFCD;/*color del cuerpo de la pagina*/
   margin: 0;
@@ -12,6 +16,13 @@ header  {
 header .logo {
 float: left;
 margin-left: 200px;/*Distancia del logo al borde izquierdo*/
+}
+
+.menu li{
+  color:black;
+  font-family: 'Montserrat';
+  font-weight: bold;
+  text-decoration:none;
 }
 
 header .menu {
@@ -201,7 +212,7 @@ height: 500px;/* Alto de la imagen */
 }
 .fondo_blanco{
   background-color: white;
-  height: 1000px;
+  height: 950px;
   text-align: center;
 }
 /*Tercera parte del cuerpo*/
@@ -266,6 +277,127 @@ height: 500px;/* Alto de la imagen */
   color: rgba(43, 43, 43, 0.692);
   border-radius: 30px;
   box-shadow: 10px 7px 10px; /*agregar sombre detras de la imagen para dalr efecto 3d*/
+}
+
+/* INICIO Descargar app */
+
+/* BOTON DE DESCARGA DEL HEADER */
+.get-app-button a{
+  color:inherit;
+  text-decoration: inherit;
+}
+
+.get-app-button{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 16px;
+  padding-right: 16px;
+  background-color:green;
+  color: white;
+  font-family:'Nunito Sans';
+  font-size: 17px;
+  font-weight: bold;
+  border: rgb(16, 171, 16);
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 3px;
+  transition: box-shadow 0.15s;
+}
+
+.get-app-button:hover{
+  cursor: pointer;
+  opacity: 95%;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.get-app-button:active{
+  opacity: 80%;
+}
+
+/* SECCIÓN DE DESCARGA DE LA APP */
+.download-container{
+  display: flex;
+  background-color: white;
+  font-family: 'Nunito Sans';
+  padding-bottom: 100px;
+}
+
+.left-download-container{
+  flex: 1.5;
+}
+
+.right-download-container{
+  flex: 1;
+  text-align: right;
+  margin-right: 400px;
+  margin-top: 100px;
+}
+
+.download-title{
+  margin-top: 250px;
+  margin-left: 300px;
+  font-size: 30px;
+  font-weight: bold;
+  display: inline-block;
+}
+
+.download-buttons{
+  margin-left: 300px;
+  margin-top: 30px;
+}
+
+.store-button{
+  margin-right: 30px;
+  width: 25%;
+  height: 25%;
+}
+
+.app-stats{
+  margin-top: 50px;
+  margin-left: 300px;
+  padding-bottom: 50px;
+}
+
+.stats-button{
+  padding-top: 25px;
+  padding-bottom: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-right: 35px;
+  border: none;
+  border-radius: 5px;
+  font-family: "Nunito Sans";
+  font-weight: bold;
+  font-size: 20px;
+  color: white;
+  background-color: #7E8925;
+  transition: opacity 0.2s;
+}
+
+.stats-button:hover{
+  opacity: 92%;
+}
+
+.stats-button:active{
+  opacity: 87%;
+}
+
+.stats-button-icon{
+  width: 25%;
+  height: 25%;
+}
+
+/* FIN Descargar app */
+
+.back-to-top{
+  background-color: white;
+  text-align: center;
+}
+
+.back-to-top img{
+  border: none;
+  height: 50px;
+  width: 50px;
 }
 
 /*Pie de Pagina*/
