--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -11,11 +11,21 @@ header  {
   display: flex;
   justify-content: space-between; /* Distribuye los elementos alineándolos a los extremos */
   align-items: center; /* Centra verticalmente los elementos */
+  position: fixed;
+  z-index: 100000;
+  width: 100%;
+  transition: 0.6s
 }
 
 header .logo {
 float: left;
 margin-left: 200px;/*Distancia del logo al borde izquierdo*/
+}
+
+header.sticky{
+  padding: 5px 100px;
+  background: #E7EFCD;
+  z-index: 100000;
 }
 
 .menu li{
@@ -409,6 +419,7 @@ p {
   border: none;
   height: 50px;
   width: 50px;
+  cursor: pointer;
 }
 
 /*Pie de Pagina*/
