--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,10 @@
 html {
   scroll-behavior: smooth;
+  /* Tamaño de fuente por defecto en navegadores: 16px -> 62.5% de 16px = 10px */ 
+  /* em = unidades relativas respecto al font-size del elemento actual */
+  /* rem = unidades relativas respecto al font-size de la raiz html */
+  /* Entonces 1rem=10px (Utilizar rem o em para que sea responsive) */
+  font-size: 62.5%; 
 }
 
 body {
@@ -9,6 +14,7 @@ body {
 }
 header  {
   display: flex;
+  font-size: 1.6rem;
   justify-content: space-between; /* Distribuye los elementos alineándolos a los extremos */
   align-items: center; /* Centra verticalmente los elementos */
   position: fixed;
@@ -17,18 +23,23 @@ header  {
   transition: 0.6s
 }
 
+header ul{
+  font-size: 0;
+}
+
 header .logo {
-float: left;
-margin-left: 200px;/*Distancia del logo al borde izquierdo*/
+  float: left;
+  margin-left: 20em; /*Distancia del logo al borde izquierdo */
 }
 
 header.sticky{
-  padding: 5px 100px;
+  padding: 0.5rem 10rem;
   background: #E7EFCD;
   z-index: 100000;
 }
 
 .menu li{
+  font-size: 1.6rem;
   color:black;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
@@ -36,14 +47,14 @@ header.sticky{
 }
 
 header .menu {
-list-style: none;
-margin: 0;
-padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 header .menu li {
 display: inline-block;
-margin-right: 70px;
+margin-right: 7rem;
 }
 
 header .menu li a:hover {
@@ -522,4 +533,8 @@ p {
 }
 .contenedor2 small{
   color: #fff;
+}
+
+@media screen and (max-width: 700px){
+  
 }
