--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,7 +6,6 @@ html {
   /* Entonces 1rem=10px (Utilizar rem o em para que sea responsive) */
   font-size: 62.5%; 
 }
-
 body {
   background-color: #E7EFCD;/*color del cuerpo de la pagina*/
   margin: 0;
@@ -18,14 +17,13 @@ header  {
   background-color: #E7EFCD;
   padding: 10px;
   display: flex;
-  justify-content: space-between;/* Distribuye los elementos alineándolos a los extremos */
-  align-items: center;/* Centra verticalmente los elementos */
+  justify-content: space-between;
+  align-items: center;
   z-index: 100000;
   font-size: 1.6rem;
   width: 100%;
   transition: 0.6s
 }
-
 
 header ul{
   font-size: 0;
@@ -141,7 +139,7 @@ list-style: none;
 #s5:checked ~ #slide4 {
   transform: translate3d(-90%, 0, -100px); /* Aumentar el porcentaje para el triple de separación */
 }
-/*Primera parte---------------------*/
+/*---------------------*/
 .container {
   display: flex;
   align-items: center;
@@ -207,6 +205,8 @@ list-style: none;
   width: 55rem;
   height: 5.5rem;
 }
+
+
 /*Segunda parte del cuerpo*/
 .columna_cuadros {
   display: flex;
@@ -662,5 +662,7 @@ h1, h2 {
 .get-app:hover::before {
   border-color: #ffffff;
 }
+
+
 
 
