--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -206,15 +206,14 @@ Se traslado a la tercera sección
 
 .imagen_app {
   flex: 1;
-  margin-left: 3.125rem;
-  margin-top: 5rem;
+  margin-left: 2.5rem;
+  /* margin-top: 5rem; */
 }
 
 .imagen_app img {
-  width: 55rem;
+  width: 18rem;
   height: 5.5rem;
 }
-
 
 /*Segunda parte del cuerpo*/
 .columna_cuadros {
@@ -351,60 +350,78 @@ p {
   font-size: 2rem;
 }
 .parrafo_titulo{
+  color:white;
   text-align: center;
 }
 .parrafo1{
+  color:white;
   text-align: center;
-}
-.parrafo1 p{
-  width: 400px;
+  max-width: 400px;
   margin: 0 auto;
-  white-space: normal;
 }
 .parrafo1 h4{
   font-size: 1.7rem;
 }
-.parrafos_derecha{
+.parrafo2{
+  color:white;
   text-align: center; 
-}
-.parrafos_izquierda{
-  text-align: center; 
-}
-.parrafo2 {
-  width: 400px;
+  max-width: 400px;
   margin: 0 auto;
-  white-space: normal;
 }
 .parrafo2 h4{
   font-size: 1.7rem;
 }
-.parrafo3 {
-  white-space: normal;
+.parrafo3{
+  color:white;
+  text-align: center;
+  max-width: 400px;
   margin: 0 auto;
-  width: 400px;
 }
 .parrafo3 h4{
   font-size: 1.7rem;
 }
-.parrafo4 p{
-  width: 400px;
+.parrafo4{
+  color:white;
   text-align: center;
-  white-space: normal;
+  max-width: 400px;
   margin: 0 auto;
 }
 .parrafo4 h4{
   font-size: 1.7rem;
 }
+
 /* Estilos para pantallas grandes */
-@media (min-width: 1024px) {
+@media (min-width: 1450px) {
+  /* Primera sección */
+  .slogan h1 {
+    font-size: 3.5rem;
+  }
+  .slogan {
+    padding: 2rem;
+    /* height: 50rem; */
+    height: 40rem;
+    margin-left: 35rem; /* Ajusta este valor según tus necesidades */
+    margin-right: 20rem;
+    width: 900px; 
+  }
+  .cuadro_externo {
+    position: absolute;
+    width: 570px;
+    height: 470px;
+    background-color: transparent;
+    border: 10px solid #483C1F;
+    margin-left: 430px;
+    margin-top: 100px;
+  }
   .container {
     flex-direction: row; /* Volver a la dirección de flexión original */
   }
-
   .imagen_celular {
     margin-top: 0; /* Reiniciar el espacio entre el eslogan y la imagen */
     margin-right: 22.5rem;
   }
+
+  /* Tercera sección */
   .parrafo_titulo{
     color:white;
     text-align: center;
@@ -414,6 +431,8 @@ p {
     color:white;
     text-align: center;
     margin-left: 5rem; 
+    margin: 0 auto;
+    max-width: 400px;
   }
   .parrafos_alineados { /*para que los parrafos de la derecha e izquierda de la tercera seccion esten a la misma altura*/
     display: flex;
@@ -422,41 +441,102 @@ p {
   .parrafo2{
     flex: 1;
     color:white;
+    max-width: 400px;
+    margin: 0 auto;
   }
   #derecha{
     text-align: right; /*parrafo este alineado a la derecha*/
-    margin-left: 25rem; 
+   /*  margin-left: 5rem; */
+    margin-left: 30rem;
   }
   #izquierda{
     text-align: left; /*parrafo este alineado a la izquierda*/
-    margin-right: 25rem;
+    /* margin-right: 4rem; */
+    margin-right: 30rem;
   }
-  .parrafos_izquierda{
+  .parrafo3{
     flex: 1;
     color:white;
+    max-width: 400px;
+    margin: 0 auto;
   }
   #derecha1{
     text-align: right; /*parrafo inferior este alineado a la derecha*/
-    margin-left: 25rem; 
   }
   #izquierda1{
     text-align: left; /*parrafo inferior este alineado a la derecha*/
-    margin-right: 25rem;
   }
   .parrafo4{
     color:white;
     text-align: center;
     margin-left: 5rem;
+    max-width: 400px;
+    margin: 0 auto;
   }
   .imagen {
     flex: 1; 
     text-align: center; /*centrar la imagen entre los textos de los 2 primeros parrafos*/
     margin-right: 1rem;
   }
-  .embed-container {
-    width: 200px;
-    height: 150px;
-  } 
+}
+
+/* Estilos para tablets (pantallas medianas)*/
+@media (min-width: 1000px) and (max-width: 1449px) {
+  /* Tercera sección */
+  .parrafo_titulo{
+    color:white;
+    text-align: center;
+    margin-left: 5rem; 
+  }
+  .parrafo1 p{
+    max-width: 400px; /* El ancho máximo deseado */
+    text-align: center;
+    margin: 0 auto;
+  }
+  .parrafos_alineados { /*para que los parrafos de la derecha e izquierda de la tercera seccion esten a la misma altura*/
+    display: flex;
+    margin-left: 5rem;
+  }
+  .parrafo2{
+    flex: 1;
+    color:white;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  #derecha{
+    text-align: right; /*parrafo este alineado a la derecha*/
+    margin-left: 5rem;
+    /* margin-left: 30rem; */
+  }
+  #izquierda{
+    text-align: left; /*parrafo este alineado a la izquierda*/
+    margin-right: 4rem;
+    /* margin-right: 30rem; */
+  }
+  .parrafo3{
+    flex: 1;
+    color:white;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  #derecha1{
+    text-align: right; /*parrafo inferior este alineado a la derecha*/
+  }
+  #izquierda1{
+    text-align: left; /*parrafo inferior este alineado a la derecha*/
+  }
+  .parrafo4{
+    color:white;
+    text-align: center;
+    margin-left: 5rem;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  .imagen {
+    flex: 1; 
+    text-align: center; /*centrar la imagen entre los textos de los 2 primeros parrafos*/
+    margin-right: 1rem;
+  }
 }
 
 /* Fin tercera parte del cuerpo */
